--- a/package.json
+++ b/package.json
@@ -12,11 +12,28 @@
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
+    "@types/spotify-web-api-node": "^5.0.7",
+    "@types/styled-components": "^5.1.26",
+    "antd": "^5.0.1",
+    "axios": "^1.2.1",
+    "cors": "^2.8.5",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.5",
+    "express": "^4.18.2",
+    "moment": "^2.29.4",
     "next": "13.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-jinke-music-player": "^4.24.2",
+    "react-player": "^2.11.0",
+    "sass": "^1.57.1",
+    "spotify-web-api-node": "^5.0.2",
+    "styled-components": "^5.3.6",
     "typescript": "4.9.3"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.19",
+    "tailwindcss": "^3.2.4"
   }
 }
