--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@types/react-dom": "18.0.9",
     "@types/spotify-web-api-node": "^5.0.7",
     "@types/styled-components": "^5.1.26",
-    "antd": "^5.0.1",
+    "antd": "4.23.6",
     "axios": "^1.2.1",
     "cors": "^2.8.5",
     "eslint": "8.28.0",
@@ -26,6 +26,7 @@
     "react-dom": "18.2.0",
     "react-jinke-music-player": "^4.24.2",
     "react-player": "^2.11.0",
+    "react-spotify-web-playback": "^0.10.0",
     "sass": "^1.57.1",
     "spotify-web-api-node": "^5.0.2",
     "styled-components": "^5.3.6",
