--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 NEXT_REDIRECT_DEV_URL = 'http://localhost:3000'
-NEXT_REDIRECT_PROD_URL = 'https://www.ourdomain.com/redirect'
+NEXT_REDIRECT_PROD_URL = 'https://apple-music-cloned.vercel.app'
